--- a/fdphd.bib
+++ b/fdphd.bib
@@ -790,6 +790,16 @@ lts.fzu.cz/pdf/d-js.pdf
   journal={NY: Springer},
   year={2008}
 }
+@article{exter1989,
+  title={Terahertz time-domain spectroscopy of water vapor},
+  author={Van Exter, Martin and Fattinger, Ch and Grischkowsky, D},
+  journal={Optics letters},
+  volume={14},
+  number={20},
+  pages={1128--1130},
+  year={1989},
+  publisher={Optical Society of America}
+}
 
 % == Simulations ==
 % -- FDTD and other numerical --/*{{{*/
