--- a/fdphd.bib
+++ b/fdphd.bib
@@ -646,6 +646,17 @@ j%% TODO understand what this is about
   year={2009},
   publisher={APS}
 }
+## TODO new thing, they seem not to have true individual behaviour
+@article{yang2015,
+  title={Terahertz magnetic and electric Mie resonances of an all-dielectric one-dimensional grating},
+  author={Yang, Yuping and Cui, Bin and Geng, Zhaoxin and Feng, Shuai},
+  journal={Applied Physics Letters},
+  volume={106},
+  number={11},
+  pages={111106},
+  year={2015},
+  publisher={AIP Publishing}
+}
 @article{valdivia2012,
   title={Composites of resonant dielectric rods: A test of their behavior as metamaterial refractive elements},
   author={Valdivia-Valero, FJ and Nieto-Vesperinas, M},
@@ -784,7 +795,7 @@ lts.fzu.cz/pdf/d-js.pdf
 /*}}}*/
 
 % == THz technology ==
-@article{lee2008book,
+@article{lee2008book,/*{{{*/
   title={Principles of terahertz science and technology},
   author={Lee,Yun-Shik},
   journal={NY: Springer},
@@ -800,6 +811,17 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1989},
   publisher={Optical Society of America}
 }
+@article{tong2012,
+  title={High power terahertz pulses generated in intense laser—plasma interactions},
+  author={Yu-Tong, Li and Wei-Min, Wang and Chun, Li and Zheng-Ming, Sheng},
+  journal={Chinese Physics B},
+  volume={21},
+  number={9},
+  pages={095203},
+  year={2012},
+  publisher={IOP Publishing}
+}
+/*}}}*/
 
 % == Simulations ==
 % -- FDTD and other numerical --/*{{{*/
