--- a/result.tex
+++ b/result.tex
@@ -243,11 +243,11 @@ The situation is different in the terahertz range, as the lattice of the crystal
 
 %}}}
 \section{Dielectric rods parallel to electric field} % references to ->
+
 \label{sect_diel_rods_el}
 %{{{
 % TODO refereence  also to \cite{valdivia2012} and \cite{shi2007}
-
-
+\cite{yang2015}
 
 
 
